--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "prebuild": "npm run lint",
     "build": "tsc",
     "copyfiles": "copy-files-from-to",
-    "lint": "tslint -p tsconfig.json",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src",
     "start": "node dist/src/ellie.js --harmony"
   },
   "license": "GPL-3.0-or-later",
   "engines": {
-    "node": ">=12"
+    "node": ">=13"
   },
   "copyFiles": [
     {
@@ -36,33 +36,39 @@
   ],
   "dependencies": {
     "@octokit/graphql": "^4.3.1",
+    "@typescript-eslint/eslint-plugin": "^2.7.0",
     "common-tags": "^1.8.0",
     "discord-akairo": "github:1computer1/discord-akairo",
     "discord.js": "github:discordjs/discord.js",
+    "eslint-config-airbnb-typescript": "^6.3.1",
     "i18n-iso-countries": "^4.3.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
     "numeral": "^2.0.6",
-    "pg": "^7.17.1",
+    "pg": "^7.18.1",
     "pluralize": "^8.0.0",
     "pokedex-promise-v2": "^3.2.0",
     "signale": "^1.4.0",
     "spotify-web-api-node": "github:KamranMackey/spotify-web-api-node",
-    "string-strip-html": "^4.3.14",
+    "string-strip-html": "^4.3.16",
     "superagent": "^5.2.1",
     "toml": "^3.0.0",
+    "typescript": "^3.7.5",
     "typeorm": "^0.2.22"
   },
   "devDependencies": {
-    "@types/node": "^12.12.25",
+    "@types/node": "^13.7.0",
     "@types/numeral": "0.0.26",
     "@types/pluralize": "0.0.29",
     "@types/pokedex-promise-v2": "github:mudkipme/pokeapi-v2-typescript",
     "@types/signale": "^1.2.1",
-    "@types/superagent": "^4.1.4",
+    "@types/superagent": "^4.1.5",
     "copy-files-from-to": "2.1.0",
-    "tslint": "^5.20.0",
-    "tslint-config-airbnb": "^5.11.2",
-    "typescript": "^3.7.5"
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0"
   }
 }
